Fix center alignment

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -4,7 +4,10 @@
   text-align: center;
   a {
     border-radius: 50% 50%;
-    margin: 0 25px 25px 0;
+    margin: 0 12px 25px 12px;
+    @include extra-small {
+      margin: 5px;
+    }
     display: inline-block;
     @include transition();
     padding: 0;
